<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_main"
android:orientation="vertical"
android:layout_width="match_parent"
android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

<TextView
    android:text = "@string/menu_title"
    android:layout_width = "match_parent"
    android:layout_height = "0dp"
    android:layout_weight = "1"
    android:textSize = "42sp"/>

    <LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="4"
    android:layout_margin="8dp">

    <Button
        android:id="@+id/buttonSinglePlayer"
        android:text = "@string/SinglePlayer"
        android:textSize = "32sp"
        android:background="@android:color/darker_gray"
        tools:ignore="NestedWeights"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="8dp"/>

    <Button
        android:text = "@string/MultiPlayer"
        android:textSize = "32sp"
        android:background="@android:color/darker_gray"

        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="8dp"/>

    <Button
        android:id="@+id/buttonStats"
        android:text = "@string/Stats"
        android:textSize = "32sp"
        android:background="@android:color/darker_gray"

        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="8dp"
        />

    <Button
        android:text = "@string/About_us"
        android:textSize = "32sp"
        android:background="@android:color/darker_gray"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="8dp"/>

</LinearLayout>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="2"
    android:layout_margin="8dp">


    <TextView
        android:text = "@string/Autores"
        android:layout_width = "wrap_content"
        android:layout_height = "wrap_content"
        android:textSize = "18sp"/>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent">

            <TextView
                android:text ="@string/Sawny"
                android:textSize = "12sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <ImageView
                android:drawable="@drawable/sawny"
                android:contentDescription="@string/Sawny"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="4dp"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent">

            <TextView
                android:text ="@string/TGOD"
                android:textSize = "12sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <ImageView
                android:drawable="@drawable/tgod"
                android:contentDescription="@string/TGOD"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="4dp" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent">

            <TextView
                android:text ="@string/Rks"
                android:textSize = "12sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <ImageView
                android:drawable="@drawable/rks"
                android:contentDescription="@string/Rks"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="4dp" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent">

            <TextView
                android:text ="@string/MetaBot"
                android:textSize = "12sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <ImageView
                android:drawable="@drawable/metabot"
                android:contentDescription="@string/MetaBot"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="4dp"
                />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent">

            <TextView
                android:text ="@string/Rj"
                android:textSize = "12sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <ImageView
                android:src="@drawable/rj"
                android:contentDescription="@string/Rj"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="4dp"
                />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
</LinearLayout>



